# twig

./: .gitignore  Makefile.messages  dune-project  iter.py  lexer.py  main.py  parse.py  pyproject.toml  run-tests  shell.nix  syntax.py  test.tw  twig  twig.opam
common/: iter.py  message.py
examples/: arrays.t  arrays.tw  bits.t  bits.tw  c_rand.t  c_rand.tw  calls.tw  casting.t  casting.tw  controls.tw  factorial.t  factorial.tw  fibonacci.t  fibonacci.tw  hello.t  hello.tw  labels.tw  lambda.tw  lerp.tw  modules.t  modules.tw  paths.t  pick_arguments.t  pick_arguments.tw  pointers.t  pointers.tw  range.t  range.tw  setmut.t  setmut.tw  strings.t  strings.tw  struct.tw  subscript.t  subscript.tw  twice.t  twice.tw  types.t  types.tw  unwrap.t  (+1 more)
examples-new/: arrays.t  bits.t  c_rand.t  hello.t  modules.t  paths.t  pointers.t  setmut.t  subscript.t  unwrap.t
frontend/: dune  env.ml  error.py  expr.ml  files.ml  infer.ml  ir.ml  ir_builder.ml  iter.py  lexer.py  loc.ml  lower.ml  map.ml  map.mli  message.py  mode.ml  mode.mli  of_ast.ml  parse.py  path.ml  sourcemap.py  stage.ml  syntax.py  token.py  tree.ml  ty.ml
lib/: dune  lexer.py  parse.py
reporting/: dune  report.ml
test/: dune
tests/: const.t  dune  echo_example.t  expr.t  fn.t  fn_definition.t  import.t  simply_typed.t  simply_typed_units.tw  sub.t  sub_definition.t  ty_definition.t
text/: ast.ml  dune  lexer.ml  lexer.py  message.py  p_common.mly  p_expression.mly  p_module.mly  p_toplevel.mly  p_type.mly  parse.ml  parse.py  parser.mly  pending.ml
util/: arrow.ml  combinator.ml  disjoint_set.ml  (+4 more)
(+8 files in other folders)
